--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="name">Name</string>
     <string name="phone">Phone</string>
     <string name="add_new_schedule">Add New Schedule</string>
+    <string name="delete_question">Do you want to delete this schedule?</string>
+    <string name="no">NO</string>
+    <string name="yes">YES</string>
 </resources>
